kubernetes/apps/network/internal/home-reverse-proxy/app/firewall-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firewall-proxy
  namespace: network
spec:
  type: ExternalName
  externalName: firewall.manor

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app firewall-proxy
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - &host "firewall.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN/./-}-production-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8443
